--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "google/apiclient": "^2.18",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/socialite": "^5.19",
+        "laravel/tinker": "^2.9",
+        "socialiteproviders/google": "^4.1",
+        "spatie/laravel-google-calendar": "^3.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
